--- a/style.css
+++ b/style.css
@@ -4,18 +4,17 @@
 
 .text-discription {
     font-size: 18px;
-    /* margin-top: 20px; */
-    /* padding: 50px; */
+
     padding-left: 200px;
     padding-right: 200px;
 
 }
 
 .contain {
-    background-image: url(images/donation1.jpg);
+    background-image: url(images/donation13.jpg)
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-position: 100%; */
+
 }
 
 .header {
@@ -61,16 +60,20 @@
     display: flex;
     /* padding: 200px; */
     justify-content: space-around;
-
-    padding-left: 300px;
+    align-items: center;
+    /* padding-left: 300px;
     padding-right: 300px;
+} */
+    padding-top: ;
 }
 
 .box-model {
     background-color: rgb(151, 223, 223);
-    height: 40px;
-    width: 80px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 50px;
+    width: 100px;
     border-radius: 5px;
     /* padding: 10px; */
 
@@ -78,11 +81,12 @@
 
 .box-modele {
     background-color: #db5f5f;
-    height: 40px;
-    width: 80px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 50px;
+    width: 100px;
     border-radius: 5px;
-    /* border-color: red; */
     border: 3px solid red;
 
 
@@ -134,4 +138,48 @@
 .salter {
     margin-bottom: 40px;
 
+}
+
+.box-1 {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 50px;
+    width: 100px;
+    background: red;
+}
+
+.hr {
+    width: 50%;
+    margin: auto;
+}
+
+.div {
+    display: flex;
+    background: mistyrose;
+    justify-content: center;
+    align-items: center;
+    /* margin-bottom: 50px; */
+
+    padding: 50px;
+    border-radius: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+.email {
+    color: #FFF4D6;
+    height: 30px;
+    width: 250px;
+    margin-top: 20px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 20px;
+
+}
+
+.right {
+    text-align: right;
 }
