--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .contain {
-    background-image: url(images/donation13.jpg)
+    background-image: url(images/donation13.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
